# PRender

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  test.c
include/: keys.h  prender.h
shaders/: circle.frag  circle.vert  quad.frag  quad.vert  shape.vert  sprite.frag  sprite.vert
src/: graphics.c  window.c
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
